--- a/.github/docker-compose.yml
+++ b/.github/docker-compose.yml
@@ -8,12 +8,17 @@
 # it will cause failure in the other container becaue of missing "go.mod" file.
 #
 # Recommended usage:
-#   docker-compose --file ./.github/docker-compose.yml run tidy && \
+#   docker-compose --file ./.github/docker-compose.yml run tidy
+#   docker-compose --file ./.github/docker-compose.yml run lint
 #   docker-compose --file ./.github/docker-compose.yml run v1_16
 #
 # NOT recommended to run all tests at once whith "up":
 #   docker-compose --file ./.github/docker-compose.yml up
 version: "3.9"
+
+volumes:
+  GO_PKG_MOD:
+
 services:
   # Service tidy updates the go.mod to the latest on Go 1.16.
   tidy:
@@ -35,6 +40,7 @@ services:
         VARIANT: 1.16-alpine
     volumes:
       - ..:/workspaces
+      - GO_PKG_MOD:/go/pkg/mod
   # Service v1_17 runs the tests on latest Go v1.17
   v1_17:
     build:
@@ -44,7 +50,8 @@ services:
         VARIANT: 1.17-alpine
     volumes:
       - ..:/workspaces
-  # Service latest runs the tests on latest Go docker image (Go 1.18)
+      - GO_PKG_MOD:/go/pkg/mod
+  # Service latest runs the tests on latest Go docker image (Go 1.19)
   latest:
     build:
       context: ..
@@ -53,3 +60,12 @@ services:
         VARIANT: alpine
     volumes:
       - ..:/workspaces
+      - GO_PKG_MOD:/go/pkg/mod
+  # run latest golangci-lint
+  lint:
+    image: golangci/golangci-lint:latest
+    working_dir: /workspaces
+    volumes:
+      - ..:/workspaces
+      - GO_PKG_MOD:/go/pkg/mod
+    entrypoint: golangci-lint run
